[gd_scene load_steps=4 format=3 uid="uid://boa6oj3q31yqn"]

[ext_resource type="Script" path="res://ui/screen_information/scan/3D/scan_viewport_gui.gd" id="1_gliyh"]
[ext_resource type="PackedScene" uid="uid://c8k32nxb50dmd" path="res://ui/screen_information/scan/3D/scan_viewport_3d.tscn" id="2_haruv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2ga5"]
bg_color = Color(0.835294, 0.835294, 0.32549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.384314, 1)

[node name="ScanViewportGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gliyh")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0313726, 0.0313726, 0.0313726, 0.556863)

[node name="ScanViewport2" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="ScanViewport2"]
layout_mode = 2

[node name="ScanSubViewport" type="SubViewport" parent="ScanViewport2/SubViewportContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="ScanViewport3D" parent="ScanViewport2/SubViewportContainer/ScanSubViewport" instance=ExtResource("2_haruv")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = 40.0
offset_right = -80.0
offset_bottom = -49.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 5

[node name="TitleLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Knife"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_n2ga5")

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Raja cuellos y piernas peludas"
autowrap_mode = 2
